--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
 /* set a reset rule 
 * {margin: 0; padding: 0; border: 0; box-sizing: border-box;}
 */
+body{
+    background-image: linear-gradient(95.2deg, rgba(173,252,234,1) 26.8%, rgba(192,229,246,1) 64%);
+
+}
 header {
     background-color: #ABC; 
+    background-image: linear-gradient(95.2deg, rgba(173,252,234,1) 26.8%, rgba(192,229,246,1) 64%);
+
     min-height: 150px;
 }
 
